got it to render

--- a/r_Rmd/February 2022.Rmd
+++ b/r_Rmd/February 2022.Rmd
@@ -384,9 +384,11 @@ p_load(engsoccerdata, reactable)
 
 str(mls)
 
+mls <- rio::import(here::here("data", "mls.rds"))
 ```
 
 ```{r esd-tests, include = TRUE}
+
 mls %>% 
   filter(round == "regular") %>% 
   maketable_all() %>% 
@@ -398,31 +400,35 @@ mls %>%
             highlight = TRUE)
 ```
 
+
+
 # 20220218: More Soccer Data
 
-```{r esd-d2, eval = FALSE}
+```{r esd-d2, include = FALSE}
 p_load(engsoccerdata)
 
-mls %>% 
-  filter(round == "regular", Season == 1996) %>% 
-  maketable_all() %>% str()
+mls <- rio::import(here::here("data", "mls.rds"))
 
 mls_pos <- function(season) {
   df <- mls %>% 
             filter(round == "regular", Season == season)
   
-  maketable_all(df) %>% 
-    select(team, position = Pos) %>% 
+  maketable_all(df)  %>% 
+      select(team, position = Pos) %>% 
     mutate(year = season,
            position = as.numeric(position))
 }
 
 mls_pos(1996)
 
-league_pos <- map(c(1996:2015), .f = mls_pos)
-# %>% 
-#   reduce(full_join)
+#league_pos <- map(c(1996:2016), .f = mls_pos) %>%  reduce(full_join)
 
+league_pos <- map_df(c(1996:2016), mls_pos)
+
+```
+
+
+```{r esd-d2-plot, include = TRUE}
 league_pos %>% 
   ggplot(aes(year, position)) + 
   geom_point(alpha = 0.2) + 
@@ -431,6 +437,9 @@ league_pos %>%
   scale_y_reverse()
 
 ```
+
+
+
 
 # 20220222: More Soccer Data
 
@@ -459,7 +468,10 @@ league_pos %>%
 
 ```{r mls-gt-setup, include = FALSE}
 p_load(engsoccerdata)
+```
 
+
+```{r mls-gt-setup-2, include = FALSE}
 s2016 <- mls %>% 
   filter(round == "regular", Season == 2016) %>% 
   select("date" = Date,home, visitor, hgoal, vgoal, hconf, vconf) %>% 
@@ -503,9 +515,12 @@ team_sum <- function(team) {
 #   reduce(bind_rows)
 
 mls_teams <- distinct(s2016, home)$home %>% as.vector()
+```
 
-lg_tbl <- map(mls_teams, team_sum) %>% reduce(bind_rows) %>% 
-  arrange(-overall_pts)
+
+```{r mls-gt-setup-3, include = FALSE}
+lg_tbl <- map_df(mls_teams, team_sum) %>% 
+  arrange(-overall_pts, -gd, -gf)
 ```
 
 
