--- a/r_Rmd/March 2022.qmd
+++ b/r_Rmd/March 2022.qmd
@@ -106,7 +106,7 @@ ggdraw() +
   draw_plot(legend, 0.2, .65, 0.2, 0.2)
 ```
 
-# 20220304 and 20220307: Still working on Unlocked Challenge #1
+# 20220304, 07 and 09: Still working on Unlocked Challenge #1
 
 ```{r new-plot, eval = FALSE}
 
@@ -150,25 +150,30 @@ anim_save(filename = here("exports", "March_2022", "waste.gif"))
 ```
 
 ```{r}
-waste <- cs_import(here("data", "z_hp", "challenge-1", "waste_disposal_data_11-29-2021.csv")) %>% remove_constant() %>% 
+land <- cs_import(here("data", "z_hp", "challenge-1", "land_cover_data_11-30-2021.csv")) %>% remove_constant() %>% 
   select(-c(flag, flag_description)) %>% 
-  rename(incinerated_waste_kt = value) 
+  rename(land_area_1000ha = value) 
 
-# skim(waste)
 
-w2 <- world %>% 
+l2 <- world %>% 
   select(area_code_iso3 = iso_a3, geometry) %>% 
-  left_join(waste) %>% 
-  mutate(test = log10(incinerated_waste_kt))
+  left_join(land) %>% 
+  mutate(log_area = log10(land_area_1000ha))
 
-w2 %>% 
-  filter(!is.na(year), year %in% c(2019)) %>% 
-  ggplot(aes(fill = incinerated_waste_kt, geometry = geometry)) +
+
+
+land_use_map <- l2 %>% 
+  filter(year %in% c(2018)) %>% 
+  filter(item == "Tree-covered areas") %>% 
+  ggplot(aes(fill = land_area_1000ha, geometry = geometry)) +
   geom_sf() + 
-  scale_fill_paletteer_c("grDevices::YlOrRd", direction = -1, na.value="yellow") +
+  scale_fill_paletteer_c("grDevices::Greens 2", direction = -1, na.value="white", trans = "log10") +
   facet_wrap(~ year) + 
   theme_void() + 
   guides(fill = guide_colorbar(barwidth = 20, barheight = 1, title.position = "top", 
-                               title = "Total Incinerated Waste (kilotonnes) in 2019")) +
+                               title = "Tree-covered areas (1000 hectares) in 2018")) +
   theme(legend.position = "bottom", legend.direction = "horizontal")
+
+ggsave(plot = land_use_map, filename = here("outputs", "z_hp", "Challenge 1 Land Use 2018.png"))
+
 ```
