--- a/r_Rmd/March 2022.qmd
+++ b/r_Rmd/March 2022.qmd
@@ -408,16 +408,21 @@ f_sum <- calc_p_change("F") %>%
 
 all_sum <- bind_rows(m_sum, f_sum) %>% 
   arrange(-percent_change) %>% 
-  rowid_to_column(var = "overall_rank")
+  rowid_to_column(var = "overall_rank") %>% 
+  filter(!is.na(percent_change))
 ```
 
-```{r plot, include = FALSE}
+```{r plot, include = TRUE}
 all_sum %>% 
-  filter(!is.na(percent_change)) %>%
+  filter(percent_change < 0) %>% 
   ggplot(aes(percent_change, rank, fill = sex)) + 
-  geom_point() +
-  scale_x_log10() + 
-  facet_wrap( ~ sex)
+  geom_vline(xintercept = 0, lty = 3, alpha = 0.2) +
+  geom_point(shape = 21, alpha = 0.1, show.legend = FALSE) +
+  ggrepel::geom_text_repel(aes(label = name), 
+                           data = all_sum %>% filter(percent_change < -99.5), 
+                           force = 20) + 
+  scale_y_reverse(name = "Rank") + 
+  labs(x = "Percent Decrease")
 ```
 
 
