--- a/r_Rmd/March 2022.qmd
+++ b/r_Rmd/March 2022.qmd
@@ -513,7 +513,9 @@ ncaa_sum <- final_ncaa %>%
                            group2 == "f_epa" ~ "female",
                            TRUE ~ "total")) %>% 
   filter(group == group2) %>% 
-  select(-group2)
+  select(-group2) %>% 
+  mutate(is_bb = case_when(sports == "Basketball" ~ " ", 
+                           TRUE ~ "  "))
 
 ncaa_sum2 <- ncaa_sum %>% 
   pivot_longer(cols = c(rev_per_athlete, exp_per_athlete), 
@@ -521,21 +523,33 @@ ncaa_sum2 <- ncaa_sum %>%
 
 ```
 
-```{r comp-plot, include = FALSE}
+```{r comp-plot, eval = FALSE}
 
 ncaa_sum %>% 
+  arrange(-rev_per_athlete) %>% 
   filter(classification_name == "NCAA Division I-FBS") %>% 
-  ggplot() + 
-  geom_linerange(aes(x = sports, 
-                   ymin = exp_per_athlete, ymax = rev_per_athlete, 
+  ggplot(aes(x = fct_reorder(sports, exp_per_athlete))) + 
+  geom_linerange(aes(ymin = exp_per_athlete, ymax = rev_per_athlete, 
                    color = group), 
-               position = position_dodge(width = 0.8), show.legend = FALSE) + 
-  geom_point(aes(x = sports, y = rev_per_athlete, color = group),
-             position = position_dodge(width = 0.8), shape = 21) + 
-  geom_point(aes(x = sports, y = exp_per_athlete, color = group),
-             position = position_dodge(width = 0.8)) +
-  coord_flip()
+               position = position_dodge(width = 0.4), show.legend = FALSE) + 
+  geom_point(aes(y = rev_per_athlete, color = group),
+             position = position_dodge(width = 0.4), shape = 21, fill = "white") + 
+  geom_point(aes(y = exp_per_athlete, color = group),
+             position = position_dodge(width = 0.4)) +
+  scale_y_continuous(labels = scales::dollar_format()) + 
+  paletteer::scale_color_paletteer_d("colorblindr::OkabeIto") + 
+  labs(x = NULL, y = NULL, color = NULL) + 
+  coord_flip() + 
+  ggforce::facet_col(vars(is_bb), scales = "free", space = "free") + 
+  theme_minimal() +
+  theme(legend.position = c(0.8, 0.2), strip.background = element_blank())
 
+ggsave(filename = here("exports", "ncaa.png"), plot = last_plot())
+
+```
+
+```{r ncaa-plot, include = TRUE}
+knitr::include_graphics(here("exports", "ncaa.png"))
 ```
 
 ```{r knit-exit, include = FALSE}
