--- a/r_Rmd/April 2022.Rmd
+++ b/r_Rmd/April 2022.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "April 2022: 30 Day Chart Challenge"
-description: |
-  For the month of April, I will be attempting some of the 30 day chart challenge.
 author:
   - name: Clark Sims 
 date: "`r Sys.Date()`"
@@ -31,6 +29,11 @@ conflict_prefer("filter", "dplyr")
 theme_set(theme_bw(base_size = 15) + theme(legend.position = "bottom"))
 ```
 
+# **Introduction**
+
+For April I am going to complete some of the [30 Day Chart Challenge](https://github.com/dominicroye/30DayChartChallenge_Edition2022).
+
+
 # Day 1: Part-to-Whole
 
 ```{r d1-setup, include = FALSE}
@@ -45,8 +48,15 @@ tx_sum <- txhousing %>%
   select(year, month, total_sales, monthly_sales) %>% 
   rowwise() %>% 
   mutate(monthly_pct = (monthly_sales / total_sales) * 100) %>% 
-  ungroup()
-  
+  ungroup() %>% 
+  mutate(hsize = 2) %>% 
+  left_join(tibble(
+    month = seq(1:12),
+    month_name = month.abb
+)) %>% 
+  mutate(month_name = factor(month_name, levels = month.abb))
+
+
 ```
 
 ```{r d1-chart, include = TRUE}
@@ -62,11 +72,22 @@ tx_sum <- txhousing %>%
 #   facet_wrap(~ year)
 
 tx_sum %>% 
-#  filter(year %in% c(2000, 2001)) %>%  
-  ggplot(aes(x = as.factor(year), y = monthly_pct, fill = as.factor(month))) + 
-  geom_col(width = 0.2, position = "stack") + 
-  coord_polar(theta = "y") + 
-  facet_wrap(~ year)
+  filter(year %in% c(2000, 2008, 2014)) %>%
+  ggplot(aes(x = hsize, y = monthly_pct, fill = month_name)) + 
+  geom_col(width = 0.2, position = "stack", color = "white", size = 0.25) + 
+  coord_polar(theta = "y", direction = -1) +
+  xlim(c(1.7, 2.3)) + 
+  labs(fill = NULL) + 
+  paletteer::scale_fill_paletteer_d("ggthemes::Red_Blue_Brown") +
+  facet_wrap(~ year) + 
+  theme_void() + 
+  labs(title = "Percent of Houses Sold in Texas by Month") + 
+  guides(fill = guide_legend(direction = "horizontal", nrow = 1)) + 
+  theme(legend.position = "bottom", legend.direction = "horizontal", 
+        strip.text = element_text(size = 16, family = "sanserif", color = "#565656"),
+        legend.text = element_text(size = 12, color = "#565656"),
+        aspect.ratio = 1, 
+        plot.title = element_text(size = 24, hjust = 0.5, vjust = 1))
 
 
 
